--- a/index.html
+++ b/index.html
@@ -4,46 +4,55 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>HTML</title>
-  
-  <!-- HTML -->
-  
-
-  <!-- Custom Styles -->
-  <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="style.css"title="" type=""/>
+  <title>Assignment6</title>
+ <style>
+.container{background-color:cadetblue; width:100%;height:40px;text-decoration: none
+  }
+.footer{background-color:cadetblue;width:100%;height:40px;}
+</style>
 </head>
 
 <body>
-  <p>
-    <address>
-    Starz University <br>
-    Chessman Avenue, Airfield, Sinkor<br>
-    Monrovia, Liberia
-    <address>
-     <hr>
+  
+  <div class="container">
+    <nav style="font-size: 16px">
+      Health Essentials
+      <a href="index.html">Home</a>
+      <a href="tips.html">Tips</a>
+      <a href="getintouch.html">Get in Touch</a>
+    </nav>
+  </div>
+     <h1> Can Vaccinated People Transmit COVID-19 to Other?
+     </h1>
+  
+   <p> Get the answer from an infectious disease specialist </p>
+   <img src="Inject.jpg" alt="Inject"
+   style="width: 100%; height: 250px; background-color:lightblue">
+   </div>
+   <p> 
+   We’ve heard it all since the pandemic started—lemon juice can kill the corona virus, masks don’t work,if you
+   already had 
+    <a href=" Coronavirus disease 2019 https://g.co/kgs/pRK4UY ">COVID-19</a>you can’t get it again or that the vaccines approved for emergency use will change your
+   DNA or put atracking device in your body.
+   <h2> <a href="mailto: doloeltonn@gmail.com">Send Us Email<a/></h2>
+   It’s almost like we need a strong dose of something to knock out all of them is information. But despite all the
+   myths and urban legends,about half of the U.S.population is fully vaccinated.<br>
+ <br> Wonderful news, right?<br>
+ <br>  Well, not to some.Vaccinated people are up against a newset of my ths—they’re literally magneticor they’re
+   going to shed vaccine components and alter the DNA of unvaccinated people. And despite the extra layer of
+   protection, they still have to grapple with the same pandemic realities as everyone else.
+   <br><br>
+   So, what do vaccinated people need to do to stay safe? And is it still possible for them to spread COVID-19 to
+   others? Infectious disease specialist
+    <a href=" https://my.clevelandclinic.org/staff/4464-lyssette-cardona ">Lyssette Cardona</a>
+   , MD, answers those questions and covers why
+   vaccination is still one of our best weapons in the fight against COVID-19.
+   </p>
+   <div class="footer">
+     <p> 
+     Copyright@ Health Essentials
      </p>
-  <h2> What is Lorem Ipsum </h2>
-  <p>
-    <strong> Lorem Ipsum</strong> is the simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not olny five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like <i><strong><em><u>Aldus  PageMaker</u></em></strong><i> including versions of <u> Lorem Ipsum </u>. 1914 translation by H Rackham
-    </p>
-    <p>
-      <blockquote> But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who love or pursues or desires to obtain pain of itself, because it is pain , but because occasionally circumstances occur in which toil and pain can procure him some great pleasure.</blockquote>
-      </p>
-      <p>
-        <h3>
-          Why do we use it?
-          </h3>
-      </p>
-      <p>
-It is long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using <u> Lorem Ipsum</u> is that it has a more-or-less normal distribution of letters, as opposed to using "Content here, content here", making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for "lorem Ipsum" will uncover many web sites still in their infancy. Various version have evolved over the years, sometimes by accident, sometimes on purpose (injected honour and the like).
-</p>
-<p>
-  <h4> where can I get some?</h4>
-</p> 
-<p>
-  <b>There are many variation of passages of Lorem Ipsum available, but the majority have suffered alternation in some form, by injected humour, or <u>randomized words</u> which don't look even slightly believable.</b> If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.<i> All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the true generator on the Internet.</i> It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum whish looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
-  <!-- Project -->
-  <script src="main.js"></script>
-</body>
+   </div>
+  </body>
 </html>
